--- a/src/app/components/popups/loading-popup/loading-popup.component.html
+++ b/src/app/components/popups/loading-popup/loading-popup.component.html
@@ -35,6 +35,7 @@
 
     <div class="loading-button-container">
       <button (click)="closePopup('new-event')">New event</button>
+      <button (click)="closePopup('see-events')">See events</button>
       <button (click)="closePopup('main-page')">Main page</button>
     </div>
   </div>
