--- a/src/app/components/admin/admin-event/view/events-view.component.html
+++ b/src/app/components/admin/admin-event/view/events-view.component.html
@@ -80,6 +80,7 @@
               <div
                 class="modify-button-container"
                 title="Edit event"
+                [routerLink]="['/admin/events/modify', event.id]"
               >
                 <i class="fa fa-pencil-square-o" aria-hidden="true">
                 </i>
