UPDATE EVENTS FINISHED

--- a/src/app/components/popups/loading-popup/loading-popup.component.html
+++ b/src/app/components/popups/loading-popup/loading-popup.component.html
@@ -6,11 +6,11 @@
 
   <div class="progress-bar-container">
     <div
-      class="progress"
+      class="progress-bar"
       [style.width.%]="uploadPercentage"
     >
-      <span>{{uploadPercentage}}%</span>
     </div>
+    <span class="loading-percentage">{{uploadPercentage}}%</span>
   </div>
 
 
