--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -23,7 +23,7 @@
       <ul id="menu" class="menu">
         <li><a routerLink="/" >{{ "home" | translate }}</a></li>
         <li><a routerLink="/events" >{{ "events" | translate }}</a></li>
-        <li><a routerLink="/articles" >{{ "articles" | translate }}</a></li>
+        <li><a routerLink="/articles" >{{ "articles.nav-title" | translate }}</a></li>
         <li><a routerLink="about" >{{ "about.nav-title" | translate }}</a></li>
       </ul>
 
