--- a/src/app/components/admin/admin-article/modify/articles-modify.component.html
+++ b/src/app/components/admin/admin-article/modify/articles-modify.component.html
@@ -1,1 +1,338 @@
-<p>modify-articles works!</p>
+<div
+  class="text-editor-container"
+  *ngIf="memberList.length == 0"
+>
+  <h1 class="main-title-text-editor">Modify article</h1>
+  <h3 class="main-title-text-editor">Add a member first</h3>
+</div>
+
+<div
+  class="text-editor-container"
+  *ngIf="memberList.length > 0"
+>
+  <h1 class="main-title-text-editor">Modify article</h1>
+
+  <form
+    id="form-editor"
+  >
+    <div class="form-element-container">
+      <div class="element">
+        <label>
+          <i class="fa fa-pencil"></i>
+          Writer
+        </label>
+        <select
+          class="select-member"
+          style="width: 100%"
+          (change)="onWriterChange($event)"
+        >
+          <option
+            *ngFor="let member of memberList;"
+          >{{member.name}} {{member.surname}} / {{member.email}}
+          </option>
+        </select>
+
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="form-element-container">
+        <div class="element">
+          <label>
+            <i class="fa fa-clock-o"></i>
+            Lecture time
+          </label>
+          <input
+            type="number"
+            [formControl]="lectureFormControl"
+            placeholder="Length of the lecture in minutes"
+          >
+        </div>
+        <div
+          *ngIf="lectureFormControl.dirty || lectureFormControl.touched || submitted"
+          class="invalid-input"
+        >
+          <div
+            *ngIf="lectureFormControl.hasError('required')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Lecture time is required
+          </div>
+          <div
+            *ngIf="lectureFormControl.hasError('min')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Lecture time must be at least equal to 1 minute
+          </div>
+          <div
+            *ngIf="lectureFormControl.hasError('max')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Lecture time must be less than or equal to 60 minutes
+          </div>
+        </div>
+      </div>
+
+      <div class="form-element-container">
+        <div class="element">
+          <label>
+            <i class="fa fa-calendar"></i>
+            Release date
+          </label>
+          <input
+            type="date"
+            [formControl]="dateFormControl"
+            onkeydown="return false"
+          >
+        </div>
+        <div
+          *ngIf="dateFormControl.dirty || dateFormControl.touched || submitted"
+          class="invalid-input"
+        >
+          <div
+            *ngIf="dateFormControl.hasError('required')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Date is required
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="form-element-container">
+      <div class="element">
+        <label>
+          <i class="fa fa-picture-o" aria-hidden="true"></i>
+          Cover photo
+        </label>
+        <input
+          id="cover-photo"
+          style="width: 100%"
+          type="file"
+          accept="image/*"
+          [formControl]="coverPhotoFormControl"
+          (change)="onFileChange($event)"
+        >
+      </div>
+      <div
+        *ngIf="coverPhotoFormControl.dirty || submitted"
+        class="invalid-input"
+      >
+        <div
+          *ngIf="coverPhotoFormControl.hasError('required')"
+        >
+          <i class="fa fa-exclamation-circle"></i> Cover photo is required
+        </div>
+        <div
+          *ngIf="coverPhotoFormControl.hasError('imageValidator')"
+        >
+          <i class="fa fa-exclamation-circle"></i> The format is not accepted
+        </div>
+      </div>
+    </div>
+
+
+    <div
+      id="im-cont" class="image-container hidden"
+      *ngIf="!coverPhotoFormControl.hasError('imageValidator')"
+    >
+      <img id="uploaded-image" alt="eventImage">
+    </div>
+
+  </form>
+
+  <hr>
+
+  <div id="buttons-container" class="buttons-container">
+    <button
+      class="selected"
+      (click)="changeSelectedTextEditor('english')"
+      id="english-button"
+    >English</button>
+    <button
+      (click)="changeSelectedTextEditor('italian')"
+      id="italian-button"
+    >Italian</button>
+    <button
+      (click)="changeSelectedTextEditor('korean')"
+      id="korean-button"
+    >Korean</button>
+  </div>
+
+  <div
+    id="text-editors"
+    class="text-editors"
+  >
+    <div
+      id="english-text-editor"
+      [hidden]="selectedLanguage !== 'english'"
+    >
+
+      <form
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              English title
+            </label>
+            <input
+              id="en-title"
+              placeholder="English title"
+              style="width: 100%"
+              type="text"
+              [formControl]="titleEnFormControl"
+            >
+          </div>
+          <div
+            *ngIf="titleEnFormControl.dirty || titleEnFormControl.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleEnFormControl.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> English title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-en" [(ngModel)]="htmlContentEn" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('english')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #englishTextEditor></ng-template>
+
+    </div>
+
+    <div
+      id="italian-text-editor"
+      [hidden]="selectedLanguage !== 'italian'"
+    >
+
+      <form
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              Italian title
+            </label>
+            <input
+              id="it-title"
+              placeholder="Italian title"
+              style="width: 100%"
+              type="text"
+              [formControl]="titleItFormControl"
+            >
+          </div>
+          <div
+            *ngIf="titleItFormControl.dirty || titleItFormControl.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleItFormControl.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> Italian title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-it" [(ngModel)]="htmlContentIt" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('italian')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #italianTextEditor></ng-template>
+
+    </div>
+
+    <div
+      id="korean-text-editor"
+      [hidden]="selectedLanguage !== 'korean'"
+    >
+
+      <form
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              Korean title
+            </label>
+            <input
+              placeholder="Korean title"
+              id="ko-title"
+              style="width: 100%"
+              type="text"
+              [formControl]="titleKoFormControl"
+            >
+          </div>
+          <div
+            *ngIf="titleKoFormControl.dirty || titleKoFormControl.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleKoFormControl.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> Korean title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-ko" [(ngModel)]="htmlContentKo" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('korean')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #koreanTextEditor></ng-template>
+
+    </div>
+  </div>
+
+
+  <button class="form-submitter" (click)="submitForm();">
+    Modify article
+  </button>
+
+</div>
+
+
+
