--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,25 +1,21 @@
-.site-footer
-{
+.site-footer {
   background-color:#91110E;
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
   color:white;
 }
-.site-footer hr
-{
+.site-footer hr {
   border-top-color:white;
   opacity:0.5
 }
-.site-footer hr.small
-{
+.site-footer hr.small {
   margin:20px 0
 }
 
 
 
-.site-footer .social-icons
-{
+.site-footer .social-icons {
   text-align:right;
 }
 .social-icons a{
