--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: 'Playfair Display', "Times New Roman";
+  font-family: 'Playfair Display', "Times New Roman", serif;
 
   background-color: rgba(211, 211, 211, 0.3);
 
