--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -4,7 +4,17 @@
 >
 
   <div
-    *ngIf="articleList.length > 0"
+    *ngIf="articleListDisplayed.length == 0"
+    class="list-articles-container"
+  >
+    <h3
+      class="articles-page-titles-container"
+    >{{"articles.subparagraph.no-articles" | translate}}</h3>
+    <hr>
+  </div>
+
+  <div
+    *ngIf="articleListDisplayed.length > 0"
     class="list-articles-container"
   >
     <h3
@@ -14,10 +24,10 @@
 
     <div
       class="display-article-container"
-      *ngFor="let article of articleList | paginate: {
+      *ngFor="let article of articleListDisplayed | paginate: {
                                                               itemsPerPage: pageSize,
                                                               currentPage: page,
-                                                              totalItems: articleList.length
+                                                              totalItems: allArticlesFiltered.length
                                                               }"
     >
       <div
@@ -59,8 +69,8 @@
 
     </div>
 
-    <div *ngIf="articleList.length > 0">
-      <div *ngIf="articleList.length > 0" class="pagination-container">
+    <div *ngIf="articleListDisplayed.length > 0">
+      <div *ngIf="articleListDisplayed.length > 0" class="pagination-container">
         <pagination-controls
           previousLabel="Prev"
           nextLabel="Next"
@@ -79,17 +89,34 @@
       class="articles-page-titles-container"
     >{{"articles.subparagraph.writers" | translate}}</h3>
     <hr>
-    <div>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
-      <p>Content</p>
+
+    <div
+      class="grid-members"
+    >
+      <div
+        *ngFor="let member of allMembers; let i = index;"
+      >
+        <div
+          class="writer-info-container filters active"
+          (click)="toggleMemberArticle(member, 'member' + i)"
+          id="member{{i}}"
+        >
+          <div>
+            <img [src]="mapMemberPhoto.get(member.email!)" alt="member-photo">
+          </div>
+
+          <div
+            style="display: flex; flex-direction: column; align-items: flex-start"
+          >
+            <h6
+              style="font-size: 14px; margin: 0"
+            >{{member.name}} {{member.surname}}</h6>
+          </div>
+        </div>
+
+      </div>
     </div>
-    <hr>
+
 
   </div>
 
