ARTICLES PAGE FINISHED. REMEMBER TO CHECK THE PAGINATION OF THE EVENTS AND ARTICLES IN THE ADMIN MENU

--- a/src/app/components/articles/articles.component.css
+++ b/src/app/components/articles/articles.component.css
@@ -16,6 +16,9 @@
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
 
 /* LIST ARTICLES CONTAINER */
