--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -87,7 +87,16 @@
   >
     <h3
       class="articles-page-titles-container"
-    >{{"articles.subparagraph.writers" | translate}}</h3>
+    >
+      {{"articles.subparagraph.writers" | translate}}
+
+      <i
+        style="cursor:pointer; font-size: 13px; align-self: center"
+        class="fa fa-info-circle"
+        aria-hidden="true"
+        title="Click on a writer to toggle the visibility of all his/her articles"
+      ></i>
+    </h3>
     <hr>
 
     <div
