--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -23,6 +23,7 @@
     <hr>
 
     <div
+      [routerLink]="['/articles/article', article.id]"
       class="display-article-container"
       *ngFor="let article of articleListDisplayed | paginate: {
                                                               itemsPerPage: pageSize,
