--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,11 @@
 .content {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
+}
+.article {
+  min-height: 100%;
+  background-color: #DBD3D6!important;
 }
 
 app-footer {
